# scatsol

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  mkdocs.yml  pyproject.toml
demo/: cylinder_cond.py  cylinder_diel.py  diel_cylinder.py  sphere_cond.py  sphere_diel.py
docs/: components.md  conf.py  index.md  index.rst  scatsol.rst
examples/: pec_cylinder_2d.py
scatsol/: __init__.py  constant.py  cylinder.py  field.py  geometry.py  material.py  pec_cylinder_2d.py  plotting.py  region.py  solver.py  sphere.py  typing.py  utils.py
tests/: test_material.py  test_scatsol.py
