[tool.poetry]
name = "scatsol"
version = "0.0.1"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]
packages = [{ include = "scatsol", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.2"
scipy = "^1.9.1"
matplotlib = "^3.5.3"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Cython = "^0.29.32"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.1.1"
sphinx-autodoc-typehints = "^1.19.2"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
black = "^22.6.0"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
