[tool.poetry]
name = "scatsol"
version = "0.0.3"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]
packages = [{ include = "scatsol", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^2.0.0"
coverage = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^24.2.0"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
