[tool.poetry]
name = "scatsol"
version = "0.0.2"
description = "Electromagnetic Scattering Solutions"
authors = ["tiagovla <tiagovla@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
black = "^22.6.0"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.5.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
